fix: mobile navbar z-index

--- a/web-ui/src/layouts/AppLayoutWithNavbar/Navbar/Navbar.css
+++ b/web-ui/src/layouts/AppLayoutWithNavbar/Navbar/Navbar.css
@@ -74,6 +74,7 @@
   padding: 20px 16px;
   transform: translateX(-50%);
   width: 100%;
+  z-index: 10;
 }
 
 @media (prefers-color-scheme: light) {
